--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "@okta/jwt-verifier": "0.0.12",
     "body-parser": "^1.19.0",
+    "btoa": "^1.2.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^6.0.0",
     "express": "^4.17.1",
     "ioredis": "^4.17.3",
     "jade": "^1.11.0",
     "jsonschema": "^1.2.6",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   }
 }
