--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "ioredis": "^4.17.3",
     "jade": "^1.11.0",
+    "json-merge-patch": "^1.0.0",
     "jsonschema": "^1.2.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
